--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-dev/.terraform
-dev/.terraform/*
-stage/.terraform
-stage/.terraform/*
-prod/.terraform
-prod/.terraform/*
+!/.terraform
+!/.terraform/*
